fixed home grid wrap

--- a/sass/site/_layout.scss
+++ b/sass/site/_layout.scss
@@ -3,11 +3,11 @@
  */
 .entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.wp-block-separator),
 .wp-block-group.post-meta,
-.emdb-layout-wrap {
+.emdb-layout-wrap,
 // .post-navigation,
 // .comments-area,
 // .page-posts-grid,
-// .emdb-block-posts-grid,
+.emdb-block-posts-grid {
 // .archive-header,
 // .page-header,
 // .error404 article,
